Add funnel plot with dropped sample

--- a/meta_analysis.ipynb
+++ b/meta_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,14 +290,14 @@
     "        rults[0][7],     #Q test value\n",
     "        rults[0][8],     #p value for Q test\n",
     "        str(round(rults[0][9],2))+\"%\")   #I-square value\n",
-    "    text += \"Overall effect test: z=%.2f, p=%.10f\\n\"%(float(rults[0][10]), float(rults[0][11]))  #z-test value and p-value\n",
+    "    text += \"Overall effect test: z=%.2f, p=%.3f\\n\"%(float(rults[0][10]), float(rults[0][11]))  #z-test value and p-value\n",
     "    \n",
     "    return text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,10 @@
     "    # Replace 'X' with NaN\n",
     "    df = df.replace('X', np.nan)\n",
     "    \n",
-    "    df = df[df['ave']==ave]\n",
+    "    if ave == 'Severe+':\n",
+    "        df = df[df['ave'].isin(['Severe', 'Critical', 'Death', 'ED', 'ICU'])]\n",
+    "    else:\n",
+    "        df = df[df['ave']==ave]\n",
     "    df = df[df['variant']==variant]\n",
     "\n",
     "    # Convert numeric columns to appropriate type\n",
@@ -316,7 +319,7 @@
     "                   'no_of_participants_in_placebo_groupcontrol_group', 'no_of_infected_in_placebo_group']\n",
     "    for col in numeric_cols:\n",
     "        df[col] = pd.to_numeric(df[col], errors='coerce')\n",
-    "    \n",
+    "\n",
     "    # Create formatted strings for PythonMeta\n",
     "    study_strings = []\n",
     "    for _, row in df.iterrows():\n",
@@ -329,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +372,9 @@
     "    \n",
     "    # Perform Egger's test\n",
     "    print(\"\\nEgger's test results:\")\n",
-    "    print(m.Eggers_test(results))"
+    "    print(m.Eggers_test(results))\n",
+    "\n",
+    "    return(results)"
    ]
   },
   {
@@ -470,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,6 +620,132 @@
    "outputs": [],
    "source": [
     "run_combined_meta_analysis('rw_vaccine_details.xlsx', ave='Severe', save_file=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "study_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Severe + Critical + Death + ED + ICU\n",
+    "# Symptomatic + random effects\n",
+    "\n",
+    "# Prepare the data\n",
+    "ave = 'Severe+'\n",
+    "# ave = 'Critical'\n",
+    "study_data = prepare_data_for_pythonmeta('rw_vaccine_details.xlsx', ave=ave)\n",
+    "\n",
+    "# Set up the analysis settings\n",
+    "settings = {\n",
+    "    \"datatype\": \"CATE\",  # for CATEgorical/binary data\n",
+    "    \"models\": \"Random\",  # Random effects model\n",
+    "    \"algorithm\": \"MH\",   # Mantel-Haenszel method、\n",
+    "    \"effect\": \"RR\"      # Risk Ratio as effect measure\n",
+    "}\n",
+    "\n",
+    "# Run the analysis\n",
+    "results = run_meta_analysis(study_data, settings, ave=ave, save_fig=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Severe + Critical + Death + ED + ICU\n",
+    "# Symptomatic + random effects\n",
+    "\n",
+    "# Prepare the data\n",
+    "ave = 'Severe+'\n",
+    "# ave = 'Critical'\n",
+    "study_data = prepare_data_for_pythonmeta('rw_vaccine_details.xlsx', ave=ave)\n",
+    "\n",
+    "# Set up the analysis settings\n",
+    "settings = {\n",
+    "    \"datatype\": \"CATE\",  # for CATEgorical/binary data\n",
+    "    \"models\": \"Fixed\",  # Random effects model\n",
+    "    \"algorithm\": \"MH\",   # Mantel-Haenszel method、\n",
+    "    \"effect\": \"RR\"      # Risk Ratio as effect measure\n",
+    "}\n",
+    "\n",
+    "# Run the analysis\n",
+    "results = run_meta_analysis(study_data, settings, ave=ave, save_fig=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test removeing ons small size sample on the symptomatic endpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Symptomatic + random effects\n",
+    "\n",
+    "# Prepare the data\n",
+    "ave = 'Symptomatic'\n",
+    "study_data = prepare_data_for_pythonmeta('rw_vaccine_details.xlsx', ave=ave)\n",
+    "\n",
+    "# Remove Frenck2021_safety_immunogenicity_and_efficacy_of_the_BNT162b2, index:6\n",
+    "study_data.pop(6)\n",
+    "\n",
+    "\n",
+    "# Set up the analysis settings\n",
+    "settings = {\n",
+    "    \"datatype\": \"CATE\",  # for CATEgorical/binary data\n",
+    "    \"models\": \"Random\",  # Random effects model\n",
+    "    \"algorithm\": \"MH\",   # Mantel-Haenszel method\n",
+    "    \"effect\": \"RR\"      # Risk Ratio as effect measure\n",
+    "}\n",
+    "\n",
+    "# Run the analysis\n",
+    "results = run_meta_analysis(study_data, settings, ave=ave, save_fig=False)\n",
+    "# Note: Manually change file name to RW2025_funnel_Random_Symptomatic_drop_small_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Symptomatic + fixed effects\n",
+    "\n",
+    "# Prepare the data\n",
+    "ave = 'Symptomatic'\n",
+    "study_data = prepare_data_for_pythonmeta('rw_vaccine_details.xlsx', ave=ave)\n",
+    "\n",
+    "# Remove Frenk2021_safety_immunogenicity_and_efficacy_of_the_BNT162b2, index:6\n",
+    "study_data.pop(6)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Set up the analysis settings\n",
+    "settings = {\n",
+    "    \"datatype\": \"CATE\",  # for CATEgorical/binary data\n",
+    "    \"models\": \"Fixed\",  # Random effects model\n",
+    "    \"algorithm\": \"MH\",   # Mantel-Haenszel method\n",
+    "    \"effect\": \"RR\"      # Risk Ratio as effect measure\n",
+    "}\n",
+    "\n",
+    "# Run the analysis\n",
+    "results = run_meta_analysis(study_data, settings, ave=ave, save_fig=False)"
    ]
   }
  ],
